advades Logo auf allen Folien

--- a/css/custom.css
+++ b/css/custom.css
@@ -49,7 +49,7 @@
     position: absolute;
     right: 140px;
     bottom: 10px;
-    background-image: url(/img/advades-logo.svg);
+    background-image: url(img/advades-logo.svg);
     background-repeat: no-repeat;
     background-size: contain;
     z-index: 1;
